[gd_scene load_steps=13 format=2]

[ext_resource path="res://common/Robot/RobotSkin.tscn" type="PackedScene" id=1]
[ext_resource path="res://Screens/Area/Hurtbox3D/HurtboxEnemy3D.gd" type="Script" id=2]

[sub_resource type="SphereShape" id=5]
radius = 0.4

[sub_resource type="SphereShape" id=2]
radius = 0.557096

[sub_resource type="SphereShape" id=3]
radius = 0.899978

[sub_resource type="Gradient" id=11]
offsets = PoolRealArray( 0, 0.596721 )
colors = PoolColorArray( 0.376471, 0.376471, 0.376471, 1, 0.376471, 0.376471, 0.376471, 0 )

[sub_resource type="GradientTexture" id=12]
gradient = SubResource( 11 )

[sub_resource type="Curve" id=6]
_data = [ Vector2( 0, 0.116379 ), 0.0, 1.81734, 0, 0, Vector2( 1, 0.720721 ), -2.06896, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=7]
curve = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=8]
direction = Vector3( 0, 1, 0 )
spread = 10.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 2.0
initial_velocity_random = 0.2
tangential_accel = 1.0
scale = 0.2
scale_random = 0.32
scale_curve = SubResource( 7 )
color = Color( 0.376471, 0.376471, 0.376471, 1 )
color_ramp = SubResource( 12 )

[sub_resource type="SpatialMaterial" id=9]
flags_transparent = true
vertex_color_use_as_albedo = true
params_diffuse_mode = 4
params_specular_mode = 3

[sub_resource type="SphereMesh" id=10]
material = SubResource( 9 )
radial_segments = 32
rings = 24

[node name="HurtboxEnemy3D" type="KinematicBody"]
collision_layer = 4
collision_mask = 5
script = ExtResource( 2 )
steer_force = 0.5

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.4, 0 )
shape = SubResource( 5 )

[node name="Model" type="Spatial" parent="."]

[node name="RobotSkin" parent="Model" instance=ExtResource( 1 )]
transform = Transform( 0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0, 0, 0 )

[node name="RayCast" type="RayCast" parent="Model"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
enabled = true
cast_to = Vector3( 0, 0, 0.75 )

[node name="HurtBox" type="Area" parent="."]
collision_layer = 0
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="HurtBox" groups=["Draw", "HurtBox"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.35134, 0 )
shape = SubResource( 2 )

[node name="HitBox" type="Area" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="HitBox" groups=["Draw", "HitBox"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.351, 0 )
shape = SubResource( 3 )

[node name="Smoke" type="Particles" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.561765, 0 )
emitting = false
amount = 16
speed_scale = 0.7
explosiveness = 0.1
draw_order = 2
process_material = SubResource( 8 )
draw_pass_1 = SubResource( 10 )
